# BoostChatroom

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  ubuntu_firewall_open_ports.sh
CMakeProject1/Client/: CMakeLists.txt
CMakeProject1/Client/include/: Client.h
CMakeProject1/Client/include/Interface/: ICommand.h
CMakeProject1/Client/include/Server/: ClientServerConnectionManager.h  ClientServerManager.h  CommandProcessor.h
CMakeProject1/Client/src/: Client.cpp  ClientMain.cpp
CMakeProject1/Client/src/Server/: ClientServerConnectionManager.cpp  ClientServerManager.cpp  CommandProcessor.cpp
CMakeProject1/Common/: CMakeLists.txt
CMakeProject1/Common/include/MessageTypes/: TextMessage.h
CMakeProject1/Common/include/MessageTypes/Interface/: IMessage.hpp
CMakeProject1/Common/include/Server/: MessageReciever.h
CMakeProject1/Common/src/MessageTypes/: TextMessage.cpp
CMakeProject1/Common/src/Server/: MessageReciever.cpp  ServerMessageSender.cpp
CMakeProject1/Server/: CMakeLists.txt
CMakeProject1/Server/include/Server/: ServerManager.h
CMakeProject1/Server/include/ServerManager/: ServerManager.h
CMakeProject1/Server/src/: Server.cpp  ServerMain.cpp
CMakeProject1/Server/src/Server/: ServerManager.cpp
CMakeProject1/Server/src/ServerManager/: ServerManager.cpp
CMakeProject1/Shared/: CMakeLists.txt
CMakeProject1/Shared/include/MessageTypes/File/: FileMessage.h
CMakeProject1/Shared/include/MessageTypes/Interface/: IMessage.hpp
CMakeProject1/Shared/include/MessageTypes/SendHistory/: SendHistoryMessage.h
CMakeProject1/Shared/include/MessageTypes/Text/: TextMessage.h
CMakeProject1/Shared/include/MessageTypes/Utilities/: FileTransferQueue.h  HeaderHelper.h  HeaderHelper.hpp  MessageFactory.h
CMakeProject1/Shared/include/Server/: MessageReceiver.h  MessageReciever.h  MessageSender.h  ServerMessageSender.h
CMakeProject1/Shared/src/MessageTypes/: TextMessage.cpp
CMakeProject1/Shared/src/MessageTypes/File/: FileMessage.cpp
CMakeProject1/Shared/src/MessageTypes/SendHistory/: SendHistoryMessage.cpp
CMakeProject1/Shared/src/MessageTypes/Text/: TextMessage.cpp
CMakeProject1/Shared/src/MessageTypes/Utilities/: FileTransferQueue.cpp  MessageFactory.cpp
CMakeProject1/Shared/src/Server/: MessageReceiver.cpp  MessageReciever.cpp  MessageSender.cpp  ServerMessageSender.cpp
CMakeProject1/Tests/: CMakeLists.txt
CMakeProject1/Tests/include/: ServerManagerTest.h
CMakeProject1/Tests/src/: GTestMain.cpp
